Connected All Packages
Cloned and added each dependency/example into one folder

--- a/examples/ciroh_dev_workshop.ipynb
+++ b/examples/ciroh_dev_workshop.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "bafabc4e",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from snow import SnowBmi"
+    "from bmi_snow import SnowBmi"
    ]
   },
   {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "84f986eb",
    "metadata": {},
    "outputs": [],
@@ -341,35 +341,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "id": "d6c51c92",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Snow model configuration\r\n",
-      "rs_method: 1         # 1 = single threshold, 2 = dual threshold\r\n",
-      "rs_thresh: 2.5       # rain-snow temperature threshold when rs_method = 1 (°C)\r\n",
-      "snow_thresh_max: 1.5 # maximum all-snow temp when rs_method = 2 (°C)\r\n",
-      "rain_thresh_min: 4.5 # minimum all-rain temp when rs_method = 2 (°C)\r\n",
-      "ddf_max: 2           # maximum degree day melt factor (mm/day/°C)\r\n",
-      "ddf_min: 0           # minimum degree day melt factor (mm/day/°C)\r\n",
-      "tair_melt_thresh: 1  # air temperature threshold above which melt can occur (°C)\r\n",
-      "swe_init: 0          # initial snow water equivalent (mm)\r\n",
-      "dayofyear: 274       # Day of year of simulation start (ex: 1 = Jan 1, 274 = Oct 1)\r\n",
-      "year: 2012           # year of simulation start"
-     ]
+     "data": {
+      "text/plain": [
+       "{'rs_method': 1,\n",
+       " 'rs_thresh': 2.5,\n",
+       " 'snow_thresh_max': 1.5,\n",
+       " 'rain_thresh_min': 4.5,\n",
+       " 'ddf_max': 2,\n",
+       " 'ddf_min': 0,\n",
+       " 'tair_melt_thresh': 1,\n",
+       " 'swe_init': 0,\n",
+       " 'dayofyear': 274,\n",
+       " 'year': 2012}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat snow.yaml"
+    "import yaml\n",
+    "with open('snow.yaml', 'r') as file:\n",
+    "    snowyaml = yaml.safe_load(file)\n",
+    "snowyaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "b28d0484",
    "metadata": {},
    "outputs": [],
@@ -395,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "2a65f65d",
    "metadata": {},
    "outputs": [
@@ -421,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "b9b7bfec",
    "metadata": {
     "scrolled": true
@@ -455,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "ac21ec15",
    "metadata": {},
    "outputs": [
@@ -485,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "1d956322",
    "metadata": {},
    "outputs": [
@@ -523,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "9a76058f",
    "metadata": {
     "scrolled": true
@@ -557,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "09fbc3a4",
    "metadata": {},
    "outputs": [
@@ -592,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "5d9107c7",
    "metadata": {},
    "outputs": [
@@ -622,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "99014c49",
    "metadata": {},
    "outputs": [
@@ -659,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "fb1ffe8d",
    "metadata": {},
    "outputs": [
@@ -718,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "bd8a512a",
    "metadata": {},
    "outputs": [
@@ -802,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "dc5dcf6e",
    "metadata": {},
    "outputs": [],
@@ -824,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "45fd839b",
    "metadata": {},
    "outputs": [
@@ -858,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "594ede9c",
    "metadata": {},
    "outputs": [
@@ -898,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "3a853ae0",
    "metadata": {},
    "outputs": [],
@@ -928,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "0d675377",
    "metadata": {},
    "outputs": [
@@ -967,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "10988455",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "aedd0b33",
    "metadata": {},
    "outputs": [],
@@ -1043,12 +1048,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "dc52017f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from linearres import LinearresBmi"
+    "from bmi_linearres import LinearresBmi"
    ]
   },
   {
@@ -1069,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "fb025893",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "id": "260c444b",
    "metadata": {},
    "outputs": [
@@ -1135,6 +1140,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8c3d6025",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'k': 0.25, 'discharge_init': 10}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('linearres.yaml', 'r') as file:\n",
+    "    linearres = yaml.safe_load(file)\n",
+    "linearres"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c5db643d",
    "metadata": {},
@@ -1144,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "id": "01b90007",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "id": "68915a4e",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "id": "119fbd46",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "id": "0b13930f",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "id": "5ff5aa95",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "3dd1245a",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "0b6d7e02",
    "metadata": {},
    "outputs": [],
